# investment-fx-crawler

./: .env.sample  .gitignore  .travis.yml  CHANGELOG.md  Pipfile  README.md  alembic.ini  docker-compose.yml  scrapy.cfg  setup.cfg
db/versions/: d47712f990c6_create_ticks.py
histdata_scrapy/: app_logging.py  items.py  middlewares.py  pipelines.py  settings.py
histdata_scrapy/histdata_scrapy/: settings.py
histdata_scrapy/histdata_scrapy/spiders/: histdata.py
histdata_scrapy/spiders/: histdata.py
