[metadata]
name = investment_fx_crawler
version = 0.0.1
url = https://github.com/u6k/investment-fx-crawler
author = u6k
author_email = u6k.apps@gmail.com
description = Crawl fx historical data
long_description = file: README.md
license = MIT License

[options]
packages = find:

[flake8]
max-line-length = 999
